--- a/home/.config/terminator/config
+++ b/home/.config/terminator/config
@@ -14,6 +14,7 @@
     scrollbar_position = hidden
     scroll_on_output = True
     palette = "#000000:#cd0000:#00cd00:#cdcd00:#0000cd:#cd00cd:#00cdcd:#faebd7:#404040:#ff0000:#00ff00:#ffff00:#0000ff:#ff00ff:#00ffff:#ffffff"
+    use_system_font = False
     bold_is_bright = True
   [[Victor]]
     foreground_color = "#ffffff"
