Add Xkeybind configuration. Modify aliases. Modify i3 configuration.

--- a/home/.config/i3/keybinds.conf
+++ b/home/.config/i3/keybinds.conf
@@ -1,9 +1,9 @@
 # Keybinds
 # Run programs and scripts by keypress
 # start file manager
-bindsym $mod+backslash exec pcmanfm
+#bindsym $mod+backslash exec pcmanfm
 bindsym $mod+slash exec gnome-terminal -e ranger
-bindsym $mod+Shift+backslash exec nautilus
+#bindsym $mod+Shift+backslash exec nautilus
 # terminator
 bindsym $mod+Shift+Return exec terminator
 # screen brigthness
