--- a/home/.config/i3/startup-programs.conf
+++ b/home/.config/i3/startup-programs.conf
@@ -28,3 +28,4 @@ exec --no-startup-id picom
 #exec --no-startup-id syncthing -no-browser
 # start terminator at boot
 #exec --no-startup-id terminator
+exec --no-startup-id xbindkeys
