--- a/home/.config/i3/startup-programs.conf
+++ b/home/.config/i3/startup-programs.conf
@@ -29,3 +29,4 @@ exec --no-startup-id picom
 # start terminator at boot
 #exec --no-startup-id terminator
 exec --no-startup-id xbindkeys
+exec --no-startup-id gnome-polkit
