--- a/home/.config/i3/keybinds.conf
+++ b/home/.config/i3/keybinds.conf
@@ -1,34 +1,19 @@
-# Keybinds
-# Run programs and scripts by keypress
-# start file manager
 #bindsym $mod+backslash exec pcmanfm
 bindsym $mod+slash exec gnome-terminal -e ranger
 #bindsym $mod+Shift+backslash exec nautilus
-# terminator
 bindsym $mod+Shift+Return exec terminator
-# screen brigthness
-# increase screen brightness
+bindsym $mod+Return exec terminator
 bindsym XF86MonBrightnessUp exec xbacklight -inc 5
-# decrease brightness
 bindsym XF86MonBrightnessDown exec xbacklight -dec 5
-# set default monitor. 
-bindsym $mod+Shift+m exec ~/.screenlayout/laptop-single-screen.sh
-bindsym $mod+Shift+p exec ~/.screenlayout/laptop-single-screen.sh
-# run config script for monitor
-bindsym $mod+Shift+n exec ~/.screenlayout/arzopa-second-screen.sh
-# arandr for screen configuration
+#bindsym $mod+Shift+m exec ~/.screenlayout/laptop-single-screen.sh
+#bindsym $mod+Shift+p exec ~/.screenlayout/laptop-single-screen.sh
+#bindsym $mod+Shift+n exec ~/.screenlayout/arzopa-second-screen.sh
 bindsym $mod+p exec arandr
-# calendar
 bindsym $mod+c exec gnome-calendar
-# Chrome Browser
 bindsym $mod+Shift+o exec google-chrome-stable
-# FireFox Browser
 bindsym $mod+o exec firefox
-# Firefox's private session
 bindsym $mod+i exec firefox --private-window
 #bindsym $mod+Shift+i exec flatpak run com.github.micahflee.torbrowser-launcher
 bindsym $mod+Shift+i exec google-chrome-stable --incognito
- 
-# screenshots
 #bindsym $mod+Print exec gnome-screenshot -i
 #bindsym Print exec gnome-screenshot
