--- a/home/.config/i3/startup-programs.conf
+++ b/home/.config/i3/startup-programs.conf
@@ -1,32 +1,17 @@
-# STARTUP PROGRAMS
-# Run programs at startup
-# blueman Applet
-exec --no-startup-id blueman-tray
-exec --no-startup-id blueman-applet
-# background screen color gray
 exec hsetroot -solid "#000000"
-# start lxsession as polkit graphical agent
-exec --no-startup-id /usr/bin/lxpolkit
-# dunst
-exec --no-startup-id /usr/bin/dunst
-# NetworkManager applet
-exec --no-startup-id nm-applet
-# parcellite clipboard manager
-exec --no-startup-id parcellite
-# run pcmanfm as Daemon
-#exec --no-startup-id pcmanfm -d
-# fix firefox slow start
+exec --no-startup-id blueman-applet
+exec --no-startup-id blueman-tray
 #exec --no-startup-id dbus-update-activation-environment --systemd DBUS_SESSION_BUS_ADDRESS DISPLAY XAUTHORITY &
-# run pulseaudio
-exec --no-startup-id pulseaudio --start
-# pasystray for PulseAudio
-exec --no-startup-id pasystray
-# picom in the background
-# exec --no-startup-id picom -b -c
-exec --no-startup-id picom
-# syncthing daemon
-#exec --no-startup-id syncthing -no-browser
-# start terminator at boot
-#exec --no-startup-id terminator
-exec --no-startup-id xbindkeys
 exec --no-startup-id gnome-polkit
+exec --no-startup-id nm-applet
+exec --no-startup-id parcellite
+exec --no-startup-id pasystray
+#exec --no-startup-id pcmanfm -d
+exec --no-startup-id picom
+# exec --no-startup-id picom -b -c
+#exec --no-startup-id pulseaudio --start
+#exec --no-startup-id syncthing -no-browser
+#exec --no-startup-id terminator
+exec --no-startup-id /usr/bin/dunst
+exec --no-startup-id /usr/bin/lxpolkit
+exec --no-startup-id xbindkeys
