Move files. Edit aliases. Add append script.

--- a/home/.config/i3/keybinds.conf
+++ b/home/.config/i3/keybinds.conf
@@ -5,6 +5,7 @@ bindsym $mod+Shift+Return exec terminator
 bindsym $mod+Return exec terminator
 bindsym XF86MonBrightnessUp exec xbacklight -inc 5
 bindsym XF86MonBrightnessDown exec xbacklight -dec 5
+#bindsym 0 xbacklight 100
 #bindsym $mod+Shift+m exec ~/.screenlayout/laptop-single-screen.sh
 #bindsym $mod+Shift+p exec ~/.screenlayout/laptop-single-screen.sh
 #bindsym $mod+Shift+n exec ~/.screenlayout/arzopa-second-screen.sh
