--- a/home/.config/i3/startup-programs.conf
+++ b/home/.config/i3/startup-programs.conf
@@ -5,7 +5,7 @@ exec --no-startup-id blueman-tray
 exec --no-startup-id gnome-polkit
 exec --no-startup-id nm-applet
 exec --no-startup-id parcellite
-#exec --no-startup-id pasystray
+exec --no-startup-id pasystray
 #exec --no-startup-id pcmanfm -d
 exec --no-startup-id picom
 # exec --no-startup-id picom -b -c
