--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -53,7 +53,7 @@ for_window [class=".*"] border pixel 1
 title_align center
 
 # for_window [class=".*"] border pixel 0
-hide_edge_borders smart
+#hide_edge_borders smart
 
 # floating windows size
 floating_minimum_size 75 x 50
