--- a/home/.config/terminator/config
+++ b/home/.config/terminator/config
@@ -5,6 +5,7 @@
 [keybindings]
 [profiles]
   [[default]]
+    icon_bell = False
     background_darkness = 0.8
     cursor_fg_color = "#000000"
     cursor_bg_color = "#ffffff"
@@ -17,6 +18,7 @@
     use_system_font = False
     bold_is_bright = True
   [[Victor]]
+    icon_bell = False
     foreground_color = "#ffffff"
 [layouts]
   [[default]]
