Update keybinds to add Brave Browser instead of Chrome.

--- a/home/.config/i3/keybinds.conf
+++ b/home/.config/i3/keybinds.conf
@@ -1,20 +1,21 @@
 #bindsym $mod+backslash exec pcmanfm
-bindsym $mod+slash exec gnome-terminal -e ranger
-#bindsym $mod+Shift+backslash exec nautilus
-bindsym $mod+Shift+Return exec terminator
-bindsym $mod+Return exec terminator
-bindsym XF86MonBrightnessUp exec xbacklight -inc 5
-bindsym XF86MonBrightnessDown exec xbacklight -dec 5
-#bindsym 0 xbacklight 100
-#bindsym $mod+Shift+m exec ~/.screenlayout/laptop-single-screen.sh
-#bindsym $mod+Shift+p exec ~/.screenlayout/laptop-single-screen.sh
-#bindsym $mod+Shift+n exec ~/.screenlayout/arzopa-second-screen.sh
-bindsym $mod+p exec arandr
 bindsym $mod+c exec gnome-calendar
-bindsym $mod+Shift+o exec google-chrome-stable
-bindsym $mod+o exec firefox
 bindsym $mod+i exec firefox --private-window
+bindsym $mod+o exec firefox
+bindsym $mod+p exec arandr
+#bindsym $mod+Print exec gnome-screenshot -i
+bindsym $mod+Return exec terminator
+#bindsym $mod+Shift+backslash exec nautilus
 #bindsym $mod+Shift+i exec flatpak run com.github.micahflee.torbrowser-launcher
 bindsym $mod+Shift+i exec google-chrome-stable --incognito
-#bindsym $mod+Print exec gnome-screenshot -i
+#bindsym $mod+Shift+m exec ~/.screenlayout/laptop-single-screen.sh
+#bindsym $mod+Shift+n exec ~/.screenlayout/arzopa-second-screen.sh
+bindsym $mod+Shift+o exec brave-browser
+#bindsym $mod+Shift+o exec google-chrome-stable
+#bindsym $mod+Shift+p exec ~/.screenlayout/laptop-single-screen.sh
+bindsym $mod+Shift+Return exec terminator
+bindsym $mod+slash exec gnome-terminal -e ranger
+#bindsym 0 xbacklight 100
 #bindsym Print exec gnome-screenshot
+bindsym XF86MonBrightnessDown exec xbacklight -dec 5
+bindsym XF86MonBrightnessUp exec xbacklight -inc 5
