Edit README, edit aliases, edit keybindings.

--- a/home/.config/i3/keybinds.conf
+++ b/home/.config/i3/keybinds.conf
@@ -10,8 +10,8 @@ bindsym $mod+Return exec terminator
 bindsym $mod+Shift+i exec google-chrome-stable --incognito
 #bindsym $mod+Shift+m exec ~/.screenlayout/laptop-single-screen.sh
 #bindsym $mod+Shift+n exec ~/.screenlayout/arzopa-second-screen.sh
-bindsym $mod+Shift+o exec brave-browser
-#bindsym $mod+Shift+o exec google-chrome-stable
+bindsym $mod+u exec brave-browser
+bindsym $mod+Shift+o exec google-chrome-stable
 #bindsym $mod+Shift+p exec ~/.screenlayout/laptop-single-screen.sh
 bindsym $mod+Shift+Return exec terminator
 bindsym $mod+slash exec gnome-terminal -e ranger
