Change keybinds.conf and startup-programs.conf files.

--- a/gui/.config/i3/keybinds.conf
+++ b/gui/.config/i3/keybinds.conf
@@ -17,5 +17,7 @@ bindsym $mod+Shift+Return exec terminator
 bindsym $mod+slash exec gnome-terminal -e ranger
 #bindsym 0 xbacklight 100
 #bindsym Print exec gnome-screenshot
-bindsym XF86MonBrightnessDown exec xbacklight -dec 5
-bindsym XF86MonBrightnessUp exec xbacklight -inc 5
+#bindsym XF86MonBrightnessDown exec xbacklight -dec 5
+#bindsym XF86MonBrightnessUp exec xbacklight -inc 5
+bindsym XF86MonBrightnessUp exec brightnessctl set 5%+
+bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
