--- a/gui/.config/i3/startup-programs.conf
+++ b/gui/.config/i3/startup-programs.conf
@@ -1,8 +1,8 @@
-exec hsetroot -solid "#000000"
+#exec hsetroot -solid "#000000"
 exec --no-startup-id blueman-applet
 exec --no-startup-id blueman-tray
 #exec --no-startup-id dbus-update-activation-environment --systemd DBUS_SESSION_BUS_ADDRESS DISPLAY XAUTHORITY &
-exec --no-startup-id gnome-polkit
+#exec --no-startup-id gnome-polkit
 exec --no-startup-id nm-applet
 exec --no-startup-id parcellite
 exec --no-startup-id pasystray
