--- a/gui/.config/i3/keybinds.conf
+++ b/gui/.config/i3/keybinds.conf
@@ -7,11 +7,13 @@ bindsym $mod+p exec arandr
 bindsym $mod+Return exec terminator
 #bindsym $mod+Shift+backslash exec nautilus
 #bindsym $mod+Shift+i exec flatpak run com.github.micahflee.torbrowser-launcher
-bindsym $mod+Shift+i exec google-chrome-stable --incognito
 #bindsym $mod+Shift+m exec ~/.screenlayout/laptop-single-screen.sh
+#bindsym $mod+Shift+i exec google-chrome-stable --incognito
 #bindsym $mod+Shift+n exec ~/.screenlayout/arzopa-second-screen.sh
 bindsym $mod+u exec brave-browser
-bindsym $mod+Shift+o exec google-chrome-stable
+#bindsym $mod+Shift+o exec google-chrome-stable
+bindsym $mod+Shift+o exec flatpak run com.google.Chrome
+bindsym $mod+Shift+i exec flatpak run com.google.Chrome --incognito
 #bindsym $mod+Shift+p exec ~/.screenlayout/laptop-single-screen.sh
 bindsym $mod+Shift+Return exec terminator
 bindsym $mod+slash exec gnome-terminal -e ranger
