--- a/gui/.config/i3/audio-control.conf
+++ b/gui/.config/i3/audio-control.conf
@@ -5,7 +5,7 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 #bindsym XF86AudioRaiseVolume exec ~/bin/changeVolume 2dB+ unmute
 #bindsym XF86AudioLowerVolume exec ~/bin/changeVolume 2dB- unmute
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym $mod+0 exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+#bindsym $mod+0 exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
  
 # set volume to 40%
