--- a/gui/.config/i3/startup-programs.conf
+++ b/gui/.config/i3/startup-programs.conf
@@ -15,3 +15,4 @@ exec --no-startup-id picom
 exec --no-startup-id /usr/bin/dunst
 exec --no-startup-id /usr/bin/lxpolkit
 exec --no-startup-id xbindkeys
+exec --no-startup-id /usr/bin/gnome-keyring-daemon --start --components=ssh,secrets,pkcs11
