--- a/gui/.config/i3/config
+++ b/gui/.config/i3/config
@@ -12,7 +12,6 @@ include ~/.config/i3/i3bar.conf
 
 # APPEARANCE: FONTS, COLORS & BORDER
 # focused window Colors
-#client.focused #B10DC9 #B10DC9 #FFFFFF
 client.focused #0074D9 #0074D9 #FFFFFF 
 
 # font for window titles. Will also be used by the bar unless a different font is used in the bar {} block below.
@@ -25,13 +24,13 @@ exec --no-startup-id dex --autostart --environment i3
 for_window [class=".*"] border pixel 1
 
 # normal borders
-for_window [class=".*"] border normal
+#for_window [class=".*"] border normal
 
 # window title alignment
 title_align center
 
 # for_window [class=".*"] border pixel 0
-#hide_edge_borders smart
+hide_edge_borders smart
 
 # floating windows size
 floating_minimum_size 75 x 50
@@ -42,7 +41,7 @@ floating_maximum_size 1024 x 640
 # mod Key. Set Super Key as mod key
 set $mod Mod4
 
-# switch to next workspace. Left to right
+# switch to next workspace from left to right
 bindsym Mod1+Tab workspace next
 bindsym Mod4+Tab workspace next
 
@@ -52,7 +51,7 @@ bindsym $mod+d exec --no-startup-id dmenu_run -fn 'DejaVu Sans Mono:regular:pixe
 # list GUI programs
 #bindsym $mod+Shift+d exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -fn 'DejaVu Sans Mono:regular:pixelsize=20'"
 
-# run rofi (program launcher)
+# run rofi program launcher
 bindsym $mod+Shift+d exec --no-startup-id rofi -show drun
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
