--- a/home/.config/terminator/config
+++ b/home/.config/terminator/config
@@ -2,6 +2,7 @@
   borderless = True
   extra_styling = False
   inactive_color_offset = 1.0
+  putty_paste_style = True
 [keybindings]
 [profiles]
   [[default]]
