--- a/src/.config/sway/config
+++ b/src/.config/sway/config
@@ -255,7 +255,6 @@ bar {
 # exec --no-startup-id picom -b -c
 #exec --no-startup-id dbus-update-activation-environment --systemd DBUS_SESSION_BUS_ADDRESS DISPLAY XAUTHORITY &
 #exec --no-startup-id gnome-polkit
-#exec --no-startup-id pasystray
 #exec --no-startup-id pulseaudio --start
 exec --no-startup-id /usr/bin/dunst
 exec --no-startup-id /usr/bin/gnome-keyring-daemon --start --components=ssh,secrets,pkcs11
@@ -264,6 +263,7 @@ exec --no-startup-id blueman-applet
 exec --no-startup-id blueman-tray
 exec --no-startup-id nm-applet
 exec --no-startup-id parcellite
+exec --no-startup-id pasystray
 exec --no-startup-id pcmanfm -d
 exec --no-startup-id picom
 exec --no-startup-id xbindkeys
