Fix install scripts & Waybar configuration file.

--- a/src/.config/waybar/config
+++ b/src/.config/waybar/config
@@ -66,7 +66,8 @@
     "clock": {
         // "timezone": "America/New_York",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "format-alt": "{:%Y-%m-%d}"
+        /*"format-alt": "{:%Y-%m-%d}",*/
+	"format": "{:%Y-%m-%d %OI:%M %p}"
     },
     "cpu": {
         "format": "{usage}% ",
