--- a/src/.config/sway/config
+++ b/src/.config/sway/config
@@ -1,9 +1,9 @@
 # Sway Config
-#
+# Victor O. Alvarez
 # Default at: ~/.config/sway/config
 # Read `man 5 sway` for a complete reference.
 
-# Includes
+# INCLUDES
 include /etc/sway/config-vars.d/*
 include /etc/sway/config.d/*
 
@@ -11,7 +11,7 @@ include /etc/sway/config.d/*
 client.focused #0074D9 #0074D9 #FFFFFF
 font pango:monospace 8
 
-# Variables
+# VARIABLES
 # Logo key. Use Mod1 for Alt.
 set $mod Mod4
 # Home row direction keys, like vim
@@ -21,17 +21,20 @@ set $up k
 set $right l
 # Your preferred terminal emulator
 set $term terminator
-# Your preferred application launcher
+# Locker
+set $locker swaylock
+
+# Application Launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
 #set $menu dmenu_path | dmenu | xargs swaymsg exec --
 set $menu wofi --show run
+set $menu_desktop wofi --show drun
 
-# set border
+# SET BORDER
 default_border pixel 1
-#for_window [class=".*"] border pixel 1
 
-# Output configuration
+# OUTPUT CONFIGURATION
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 #output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 output * bg #000000 solid_color
@@ -41,7 +44,7 @@ output * bg #000000 solid_color
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
-# Idle configuration
+# IDLE CONFIGURATION
 exec swayidle -w \
 	timeout 600 'swaylock -f -c 000000' \
 	timeout 1200 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
@@ -72,9 +75,9 @@ input "type:keyboard" xkb_options ctrl:nocaps
 # Shutdown, Restart and Lock
 set $mode_system System (l) lock, (Shift+e) logout, (Shift+r) reboot, (Shift+s) shutdown
 mode "$mode_system" {
-    bindsym l exec --no-startup-id $Locker, mode "default"
+    bindsym l exec --no-startup-id $locker, mode "default"
     bindsym Shift+e exec --no-startup-id i3-msg exit, mode "default"
-    bindsym s exec --no-startup-id $Locker && systemctl suspend, mode "default"
+    #bindsym s exec --no-startup-id $Locker && systemctl suspend, mode "default"
     #bindsym h exec --no-startup-id $Locker && systemctl hibernate, mode "default"
     bindsym Shift+r exec --no-startup-id systemctl reboot, mode "default"
     bindsym Shift+s exec --no-startup-id systemctl poweroff -i, mode "default"  
@@ -87,10 +90,13 @@ mode "$mode_system" {
 #bindsym $mod+Pause mode "$mode_system"
 bindsym $mod+Shift+BackSpace mode "$mode_system"
 
-### Key bindings
-#
-# Basics:
-#
+# STATUS BAR
+# Read `man 5 sway-bar` for more information about this section.
+bar {
+	swaybar_command waybar
+}
+
+# KEY BINDINGS
 # Start a terminal
 bindsym $mod+Return exec $term
 
@@ -99,6 +105,7 @@ bindsym $mod+Shift+q kill
 
 # Start your launcher
 bindsym $mod+d exec $menu
+bindsym $mod+Shift+d exec $menu_desktop
 
 # Drag floating windows by holding down $mod and left mouse button.
 # Resize them with right mouse button + $mod.
@@ -118,7 +125,8 @@ bindsym $mod+Shift+o exec flatpak run com.google.Chrome
 bindsym $mod+c exec gnome-calendar
 bindsym $mod+i exec firefox-esr --private-window
 bindsym $mod+o exec firefox-esr
-bindsym $mod+p exec arandr
+#bindsym $mod+p exec arandr
+bindsym $mod+backslash exec pcmanfm
 bindsym $mod+slash exec gnome-terminal -e ranger
 bindsym $mod+u exec brave-browser
 bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
@@ -129,9 +137,8 @@ bindsym --locked XF86AudioMute exec wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindsym --locked XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- -l 1
 bindsym --locked XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ -l 1
 
-#
 # Moving around:
-#
+
     # Move your focus around
     bindsym $mod+$left focus left
     bindsym $mod+$down focus down
@@ -153,9 +160,9 @@ bindsym --locked XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@
     bindsym $mod+Shift+Down move down
     bindsym $mod+Shift+Up move up
     bindsym $mod+Shift+Right move right
-#
+
 # Workspaces:
-#
+
     # Switch to workspace
     bindsym $mod+1 workspace number 1
     bindsym $mod+2 workspace number 2
@@ -180,9 +187,9 @@ bindsym --locked XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@
     bindsym $mod+Shift+0 move container to workspace number 10
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
-#
+
 # Layout stuff:
-#
+
     # You can "split" the current object of your focus with
     # $mod+b or $mod+v, for horizontal and vertical splits
     # respectively.
@@ -205,9 +212,9 @@ bindsym --locked XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@
 
     # Move focus to the parent container
     bindsym $mod+a focus parent
-#
+
 # Scratchpad:
-#
+
     # Sway has a "scratchpad", which is a bag of holding for windows.
     # You can send windows there and get them back later.
 
@@ -217,9 +224,8 @@ bindsym --locked XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@
     # Show the next scratchpad window or hide the focused scratchpad window.
     # If there are multiple scratchpad windows, this command cycles through them.
     bindsym $mod+minus scratchpad show
-#
+
 # Resizing containers:
-#
 mode "resize" {
     # left will shrink the containers width
     # right will grow the containers width
@@ -242,17 +248,9 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
-#
-# Status Bar:
-#
-# Read `man 5 sway-bar` for more information about this section.
-bar {
-	swaybar_command waybar
-}
-
 
 # STARTUP PROGRAMS
-# exec --no-startup-id picom -b -c
+#exec --no-startup-id picom -b -c
 #exec --no-startup-id dbus-update-activation-environment --systemd DBUS_SESSION_BUS_ADDRESS DISPLAY XAUTHORITY &
 #exec --no-startup-id gnome-polkit
 #exec --no-startup-id pulseaudio --start
