--- a/src/.config/sway/config
+++ b/src/.config/sway/config
@@ -7,6 +7,9 @@
 include /etc/sway/config-vars.d/*
 include /etc/sway/config.d/*
 
+# SPECIFIC APP LAYOUTS
+for_window [app_id="kitty"] floating enable, resize set 800 600
+
 # APPEARANCE
 client.focused #0074D9 #0074D9 #FFFFFF
 font pango:monospace 8
@@ -21,6 +24,7 @@ set $up k
 set $right l
 # Your preferred terminal emulator
 set $term terminator
+set $term_2 kitty
 # Locker
 set $locker swaylock
 
@@ -99,6 +103,7 @@ bar {
 # KEY BINDINGS
 # Start a terminal
 bindsym $mod+Return exec $term
+bindsym $mod+Shift+Return exec $term_2
 
 # Kill focused window
 bindsym $mod+Shift+q kill
@@ -120,15 +125,17 @@ bindsym $mod+Shift+c reload
 # Exit sway (logs you out of your Wayland session)
 bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
 
+#bindsym $mod+Shift+o exec flatpak run com.google.Chrome
+#bindsym $mod+o exec firefox-esr
+#bindsym $mod+p exec arandr
+#bindsym $mod+u exec brave-browser
 bindsym $mod+Shift+i exec flatpak run com.google.Chrome --incognito
-bindsym $mod+Shift+o exec flatpak run com.google.Chrome
+bindsym $mod+Shift+u flatpak run com.google.Chrome
+bindsym $mod+backslash exec pcmanfm
 bindsym $mod+c exec gnome-calendar
 bindsym $mod+i exec firefox-esr --private-window
-bindsym $mod+o exec firefox-esr
-#bindsym $mod+p exec arandr
-bindsym $mod+backslash exec pcmanfm
 bindsym $mod+slash exec gnome-terminal -e ranger
-bindsym $mod+u exec brave-browser
+bindsym $mod+u exec firefox-esr
 bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
 bindsym XF86MonBrightnessUp exec brightnessctl set 5%+
 
@@ -250,9 +257,9 @@ bindsym $mod+r mode "resize"
 
 
 # STARTUP PROGRAMS
-#exec --no-startup-id picom -b -c
 #exec --no-startup-id dbus-update-activation-environment --systemd DBUS_SESSION_BUS_ADDRESS DISPLAY XAUTHORITY &
 #exec --no-startup-id gnome-polkit
+#exec --no-startup-id picom -b -c
 #exec --no-startup-id pulseaudio --start
 exec --no-startup-id /usr/bin/dunst
 exec --no-startup-id /usr/bin/gnome-keyring-daemon --start --components=ssh,secrets,pkcs11
@@ -265,3 +272,4 @@ exec --no-startup-id pasystray
 exec --no-startup-id pcmanfm -d
 exec --no-startup-id picom
 exec --no-startup-id xbindkeys
+exec wl-paste -t text --watch clipman store --no-persist
