--- a/src/.config/sway/config
+++ b/src/.config/sway/config
@@ -8,7 +8,7 @@ include /etc/sway/config-vars.d/*
 include /etc/sway/config.d/*
 
 # SPECIFIC APP LAYOUTS
-for_window [app_id="kitty"] floating enable, resize set 960 540
+for_window [app_id="terminator"] floating enable, resize set 960 540
 
 # APPEARANCE
 client.focused #0074D9 #0074D9 #FFFFFF
@@ -23,10 +23,12 @@ set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term terminator
-set $term_2 kitty
+set $term kitty
+set $term_2 terminator
 # Locker
 set $locker swaylock
+# Backgrounds
+set $beach $HOME/Syncthing/Backgrounds/beach_lopez-robin-apax4M-4kFI-unsplash.jpg
 
 # Application Launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
@@ -41,7 +43,8 @@ default_border pixel 1
 # OUTPUT CONFIGURATION
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 #output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
-output * bg #000000 solid_color
+#output * bg #000000 solid_color
+output * bg $beach fill
 # Example configuration:
 #
 #   output HDMI-A-1 resolution 1920x1080 position 1920,0
@@ -264,6 +267,7 @@ bindsym $mod+r mode "resize"
 # STARTUP PROGRAMS
 #exec --no-startup-id dbus-update-activation-environment --systemd DBUS_SESSION_BUS_ADDRESS DISPLAY XAUTHORITY &
 #exec --no-startup-id gnome-polkit
+#exec --no-startup-id nm-applet
 #exec --no-startup-id picom -b -c
 #exec --no-startup-id pulseaudio --start
 exec --no-startup-id /usr/bin/dunst
@@ -271,10 +275,8 @@ exec --no-startup-id /usr/bin/gnome-keyring-daemon --start --components=ssh,secr
 exec --no-startup-id /usr/bin/lxpolkit
 exec --no-startup-id blueman-applet
 exec --no-startup-id blueman-tray
-exec --no-startup-id nm-applet
 exec --no-startup-id parcellite
 exec --no-startup-id pasystray
 exec --no-startup-id pcmanfm -d
 exec --no-startup-id picom
-exec --no-startup-id xbindkeys
 exec wl-paste -t text --watch clipman store --no-persist
